# Night-Illumination-Model

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_sun_tracking.ipynb  02_moon_phase_analysis.ipynb  03_atmosphere_analysis.ipynb  04_earthshine_calendar.ipynb
src/illumination_model/: astrometry.py  atmosphere.py  scene.py
src/illumination_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/illumination_model/sources/: moon.py  sun.py
tests/: test_astrometry.py  test_atmosphere.py  test_moon.py
