[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "illumination_model"
version = "0.1.0"
description = "Real-time outdoor illumination modeling"
authors = [{name = "Viktor Votruba", email = "votruba@physics.muni.cz"}]
dependencies = [
    "skyfield",
    "numpy",
    "scipy",
    "matplotlib"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
